[package]
name = "uketoru"
description = "Simple SMTP Relay"
repository = "https://github.com/SapphirusBeryl/Uketoru/"
authors = [ "Xavier Moffett <sapphirus@azorium.net>" ]
license = "MIT"
version = "0.1.0"
edition = "2021"
rust-version="1.82"

[dependencies]
axum = { version = "0.7.7", default-features = false, features = [ "json", "http1", "tokio" ] } 
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
lettre = "0.11.10"
toml = "0.8.19"
